# atomic-fi

./: .credo.exs  .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile.dev  LICENSE  Makefile  README.md  config.all-lists.yml  coveralls.json  custom-watchlist.jsonl  docker-compose.yml  index.html  local-dependencies.yaml  mix.exs  package.json  playwright.config.ts  playwright.global-setup.ts  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  watchman-openapi.json
.claude/agents/: forge-example-app.md  vitest-to-bruno.md  vitest-to-mdx.md  vitest-to-react.md
.claude/commands/: create-context.md  create-integration-test.md  create-liveview-ui.md  create-rest-api-UPDATED.md  create-rest-api.md  increase-coverage.md  quality-checks.md
.claude/plans/: 2026-04-30-e2e-100pct-openapi-coverage-handover.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: regression.yml  test.yml
assets/: tailwind.config.cjs
atomic-fi-web/: README.md  index.html  package.json
atomic-fi-web/public/: example-rules.json
atomic-fi-web/src/: App.tsx  index.css
benchmarks/: apple-m2-max-2026-05-18-ten-thousand-vus.md
benchmarks/saml_d_amlgentex_synthetic/: README.md
bruno/atomic-fi-scenarios/: README.md  bruno.json  collection.bru
bruno/atomic-fi-smoke/: .gitignore  README.md  bruno.json
claude_plans/: handover-100-federated-catmull.md
config/: config.exs  dev.exs  dev.secret.exs.example  openapi_servers.dev.exs  openapi_servers.prod.exs  openapi_servers.test.exs  prod.exs  runtime.exs  test.exs
docs/: jdm-editor-qa-handoff.md  local-dev-architecture.md  prd-local-dev-simplification.md
docs/adr/: ADR-001-one-command-local-dev.md  ADR-002-copilot-runtime-sidecar.md
docs/playwright-sessions/: jdm-editor.md
e2e-tests/: blocklist-demo.spec.ts
example-apps/atomic-fi-jdm-editor/: .env.example  .gitignore  README.md  index.html  package.json  playwright.config.ts  vite.config.ts
example-apps/atomic-sight-insight/: bun.lockb  package-lock.json  package.json
example-apps/document-agent-client/: .env.example  client.py  pyproject.toml
example-apps/document-agent-server/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  vulture_whitelist.py
example-apps/document-agent-server/app/: config.py  extractor.py  main.py  prompts.py  schemas.py
example-apps/document-agent-server/tests/: conftest.py  test_extract.py
example-apps/jdm-copilot-runtime/: .env.example  README.md  package.json  tsconfig.json
example-apps/lotus-embed/: .gitignore  index.html  package.json  playwright.config.ts  vite.config.ts
example-apps/onboarding-flow/: .dependency-cruiser.cjs  .env.example  ONBOARDING_API_MAP.md  README.md  biome.json  index.html  knip.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
external-deps/: zenrule.Dockerfile
external-deps/copilot-runtime/: .dockerignore  .env.example  Dockerfile  README.md  bunfig.toml  docker.env  package-lock.json  package.json  tsconfig.json
external-deps/copilot-telemetry/: vector.yaml
guides/: api-development.md  architecture.md  authentication.md  capability-matrix.md  core-modules.md  deployment.md  generators.md  getting-started.md  introduction.md  launch-new-geography-indonesia.md  multi-tenancy.md  platform-integration.md  testing.md  use-cases.md  verifying_correctness.md
integration-tests/: .gitignore  README.md  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
lib/: alvera_phoenix_template_server.ex  alvera_phoenix_template_server_web.ex  atomic_fi.ex  atomic_fi_web.ex  payment_compliance_platform.ex  payment_compliance_platform_web.ex
patches/: @gorules__jdm-editor.patch
priv/: normalization_rules.exs
scripts/: port_platform_skill.py
src/: App.tsx
src/api/: cases.ts  (+1 more)
test/: test_helper.exs
worklogs/: issue-27-block-1-handoff.md  issue-27-handover.md  p0-baseline-handover.md  zenrule-velocity-limits.md
(+1290 files in other folders)
